<resources>
    <string name="app_name" translatable="false">uPocket</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_goals">Goals</string>
    <string name="title_account">Account</string>
    <string name="add_new">NEW MOVEMENT</string>
    <string name="incomes">Incomes</string>
    <string name="input_email">Email</string>
    <string name="input_name">Name</string>
    <string name="title_current_balance">Current Balance</string>
    <string name="title_home_today">Today</string>
    <string name="title_reminders">Reminders</string>
    <string name="create">Create</string>
    <string name="input_date">Date</string>
    <string name="input_frequency">Frequency</string>
    <string name="title_add_new_goal">Add a New Goal</string>
    <string name="input_new_item">New Item</string>
    <string name="input_price">Price</string>
    <string name="logout">Log Out</string>
    <string name="title_movement">Movement</string>
    <string name="outcomes">Outcomes</string>
    <string name="visibility">Visibility</string>
    <string name="name_movement">Name</string>
    <string name="title_add_new_movement">Add a New Movement</string>
    <string name="input_type">Type</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="copyright_picture">Copyright Picture</string>
    <string name="app_logo">uPocket ID</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="input_password">Password</string>
    <string name="msg_noautenticado">You are not logged in</string>
    <string name="msg_autenticado">There is an active session</string>
    <string name="msg_login">Do you want to login?</string>
    <string name="ok">OK</string>
    <string name="btn_nologin">No</string>
    <string name="msg_badlogin">Wrong email or password. Try again.</string>
    <string name="msg_fieldsincompletes">Fill in all fields.</string>
    <string name="msg_logout">The session was closed successfully.</string>
    <string name="msg_minpassword">Minimum 6 characters in the password.</string>
    <string name="input_repeatpassword">Repeat Password</string>
    <string name="msg_nopasswordsregister">Passwords are different</string>
    <string name="msg_badregister">Sign up failed. Try again.</string>
    <string name="msg_completeregister">"Successful registration! "</string>
    <string name="msg_goodlogin">Login is successful. Welcome!</string>
    <string name="msg_activesesion">There is an active session.</string>
    <string name="valor">Value</string>
    <string name="movimientos">Movements</string>
    <string name="txt_hello">Hello</string>
    <string name="txt_stranger">Stranger</string>
    <string name="input_uid">UID</string>
    <string name="msg_error_documentsnapshot">There was an error with DocumentSnapshot.</string>
    <string name="txt_saludo_login">Here you can log in.</string>
    <string name="txt_forgot_password">Forgot your password?</string>
    <string name="txt_registration">Getting a uPocket account is very easy:</string>
    <string name="msg_badnewmovement">Failed to register a new movement. Try again.</string>
    <string name="msg_goodnewmovement">New movement successfully registered.</string>
    <string name="msg_listenfailed">Listen failed. Error on Firebase.</string>
    <string name="update">Update</string>
    <string name="title_update">Update Goal</string>
    <string name="msg_goodnewgoal">New Goal successfully registered.</string>
    <string name="msg_badnewgoal">Failed to register a new goal. Try again.</string>
    <string name="msg_noincomes">No have incomes on BD.</string>
    <string name="msg_nooutcomes">No have outcomes on BD.</string>
    <string name="msg_noreminders">No have reminders on BD.</string>
    <string name="R.string.nogoals">No have goals on BD.</string>
    <string name="msg_nomovements">No have movements on BD.</string>
    <string name="msg_asignedid">Assigned ID</string>
</resources>