<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aplimovil.upocket.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.aplimovil.upocket.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.aplimovil.upocket.ui.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.aplimovil.upocket.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>