<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment" >

    <LinearLayout
        android:id="@+id/saludo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/saludo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hello"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:hint="@string/txt_stranger" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/saludo_text"
        app:cardCornerRadius="100dp">
        <ImageView
            android:src="@color/colorAccent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_picture"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/input_name_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/input_name"
        />

    <TextView
        android:id="@+id/input_email_account"
        android:layout_width="match_parent"
        android:layout_below="@id/input_name_account"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/input_email"
        />


    <TextView
        android:id="@+id/input_uid_account"
        android:layout_width="match_parent"
        android:layout_below="@id/input_email_account"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/input_uid"
        />

    <Button
        android:id="@+id/button_logout_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/logout"
        android:textColor="@android:color/black"
        android:background="?android:attr/windowBackground"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/img_copyright"
        android:drawableStart="@drawable/ic_baseline_power_settings_new_24"
        />

    <ImageView
        android:id="@+id/img_copyright"
        android:src="@mipmap/ic_launcher"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:contentDescription="@string/copyright_picture"
        />

</RelativeLayout>
