<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterGoalActivity">

    <TextView
        android:id="@+id/current"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal|top"
        android:text="@string/title_add_new_goal"
        android:textAppearance="@style/new_goal" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_new_item"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/input_price"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="101dp" />

    <Button
        android:id="@+id/new_movement_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_new"
        android:textColor="@android:color/white" />


    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
</LinearLayout>