<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterGoalActivity">

    <TextView
        android:id="@+id/current"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="Add a new movement"
        android:textAppearance="@style/new_goal" />

    <EditText
        android:id="@+id/meta"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/input_new_item"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:layout_below="@id/meta"
        android:hint="@string/input_price"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/new_goal_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/create"
        android:textColor="@android:color/white" />

</RelativeLayout>