<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/contenedor_current"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp">

        <TextView
            android:id="@+id/current"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|top"
            android:text="@string/title_current_balance"
            android:textAppearance="@style/current_bal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contenedor_balance"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp">

        <TextView
            android:id="@+id/balance"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|top"
            android:text="@string/title_home_today"
            android:textAppearance="@style/current_bal" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/contenedor_reminders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="1"
        app:cardCornerRadius="15dp"
        app:cardElevation="3dp">

        <TextView
            android:id="@+id/reminders"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|top"
            android:text="@string/title_reminders"
            android:textAppearance="@style/current_bal" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/new_movement_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/add_new"
        android:textColor="@android:color/white" />


</LinearLayout>